added throbber, margin fixes, stuff

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <section id="article-wrapper">
 <article itemscope itemtype="http://schema.org/BlogPosting">
-	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
 	<h1 itemprop="name">Hi there,</h1>
 	<section class="columned">
+	<p class="center"><img class="section-image intro-image" src="./images/joern_ava.png" /></p>
 	<p>My Name is Jörn and i'm a Pencil and Digital Artist from Germany.</p>	
 	<p>I believe i got into Comics like any other Kid, one day i was looking for stuff to spend my little money on, during that time a new Superman was published in Germany, i was lost for the Art of Funnybooks ever since.</p>
 	<p>When i'm not drawing, i like watching Documentaries about Countries, Star Trek TNG and Anime or i listen to Studio Ghibli Soundtracks and unhealthy amounts of Pop and Rap Music.</p>
@@ -176,15 +176,15 @@
 </div>
 <section id="vita-wrapper">
 	<article itemscope itemtype="http://schema.org/BlogPosting">
-	<p class="center"><img class="section-image vita-image" src="./images/joern.jpeg"></p>	
 	<h1 itemprop="name">How may i help you?</h1>
 	<section class="columned">
-	<h3>Stuff i do</h3>
+	<p class="center"><img class="section-image vita-image" src="./images/joern.jpeg"></p>	
 	<ul>
 		<li>Commissions with Comic Characters</li>
 		<li>Portrait Commissions</li>
 	</ul>
 
+	<p>Lorem ipsum dolor sit amet,<a href="index.html">Testlink</a> consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 	<p>Lorem ipsum dolor sit amet,<a href="index.html">Testlink</a> consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
 
