started script cleaning, experimental shareable links

--- a/index.html
+++ b/index.html
@@ -94,73 +94,73 @@
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Portfolio_1"><a href="./artwork/batgirl_co.png"><img src="./artwork/batgirl_co_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031701"><a href="./artwork/batgirl_co.png"><img src="./artwork/batgirl_co_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_8"><a href="./artwork/cowboy_bebop_colored.png"><img src="./artwork/cowboy_bebop_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031702"><a href="./artwork/cowboy_bebop_colored.png"><img src="./artwork/cowboy_bebop_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Portfolio_2"><a href="./artwork/catwoman.jpg"><img src="./artwork/catwoman_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031703"><a href="./artwork/catwoman.jpg"><img src="./artwork/catwoman_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Portfolio_3"><a href="./artwork/mugen.jpe"><img src="./artwork/mugen_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031704"><a href="./artwork/mugen.jpe"><img src="./artwork/mugen_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_9"><a href="./artwork/hansolo_sketch.png"><img src="./artwork/hansolo_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031705"><a href="./artwork/hansolo_sketch.png"><img src="./artwork/hansolo_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_10"><a href="./artwork/JynErso_Colored.png"><img src="./artwork/jynerso_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031706"><a href="./artwork/JynErso_Colored.png"><img src="./artwork/jynerso_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_11"><a href="./artwork/spock.png"><img src="./artwork/spock_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031707"><a href="./artwork/spock.png"><img src="./artwork/spock_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_12"><a href="./artwork/jubilee.png"><img src="./artwork/jubilee_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031708"><a href="./artwork/jubilee.png"><img src="./artwork/jubilee_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_13"><a href="./artwork/pepper_carrot_colored.png"><img src="./artwork/pepper_carrot_colored_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031709"><a href="./artwork/pepper_carrot_colored.png"><img src="./artwork/pepper_carrot_colored_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_14"><a href="./artwork/poedameron_sketch.png"><img src="./artwork/poedameron_sketch_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031710"><a href="./artwork/poedameron_sketch.png"><img src="./artwork/poedameron_sketch_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_15"><a href="./artwork/elektra_colored.png"><img src="./artwork/elektra_colored_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031711"><a href="./artwork/elektra_colored.png"><img src="./artwork/elektra_colored_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
 <div class="tilespot">
 <div class="spot">
-<div class="tile" id="Pencil_16"><a href="./artwork/flash_inks.jpg"><img src="./artwork/flash_inks_thumb.png" alt="An Image"></a></div>
+<div class="tile" id="I031712"><a href="./artwork/flash_inks.jpg"><img src="./artwork/flash_inks_thumb.png" alt="An Image"></a></div>
 </div>
 </div>
 
