more cleanup, new toolbar in darkbox, trying sharing button

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
 <body>
 	
 <div class="darkbox">
-
 	<div class="container-wrapper">
-	    <div class="closeBox"></div>
 		<div class="container">
 			<div class="imageBox"></div>
+		</div>
+		<div class="toolbar">
+			<div class="previousButton"></div>
+			<div class="nextButton"></div>
+		    <div class="closeBox"></div>
+			<div class="shareButton"></div>
 		</div>
 	</div>
 
